# irl-gym-multi-search

./: .gitignore  .readthedocs.yml  README.md  TODO  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  intro.rst  irl_gym.envs.rst  irl_gym.rst  modules.rst
irl_gym/: __init__.py
irl_gym/envs/: __init__.py  grid_tunnel.py  grid_world.py  sailing.py
irl_gym/test/: test.py
irl_gym_multi_search/: __init__.py
irl_gym_multi_search/envs/: __init__.py  multi_grid_world.py
irl_gym_multi_search/test/: .xdp_decision_maker.py.EKWM51  decision_maker.py  make_observation.py  obstacles.py  plot data.py  probability_distribution.py  segment_regions.py  test.py  test2.py  update_distribution.py  update_rollout_distribution.py  view_results.py  view_results_gui.py  view_results_terminal.py
irl_gym_multi_search/test/search_algorithms/: beam_search.py  depth_limited_search.py  event_horizon_search.py  greedy_region_search.py  greedy_search_cells.py  mcts_region_search.py  mcts_search.py  mcts_search_region.py  mcts_search_region_estimated.py  ra_ucb_search.py  receding_horizon_search.py  regionMCTS_search.py  simulated_search.py
